deployments/k8s/ingress/istio/restserver/destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: streamserver-destination
  namespace: realtime-app
spec:
  host: streamserver.realtime-app.svc.cluster.local
  trafficPolicy:
      tls:
        mode: DISABLE
