deployments/k8s/ingress/istio/restserver/loadbalancing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: restserver-virtualservice
  namespace: realtime-app
spec:
  hosts:
  - restserver-v1.realtime-app.svc.cluster.local
  - restserver-v2.realtime-app.svc.cluster.local
  - rest.realtime
  gateways:
  - realtime-app/restserver-gateway
  http:
  - route:
    - destination:
        host: restserver-v1.realtime-app.svc.cluster.local
        port:
          number: 8080
      weight: 75
    - destination:
        host: restserver-v2.realtime-app.svc.cluster.local
        port:
          number: 8080
      weight: 25
    corsPolicy:
      allowOrigins:
        - regex: ".*"
      allowMethods:
        - POST
        - GET
        - OPTIONS
        - PUT
        - DELETE
      allowHeaders:
        - grpc-timeout
        - content-type
        - keep-alive
        - user-agent
        - cache-control
        - content-type
        - content-transfer-encoding
        - custom-header-1
        - x-accept-content-transfer-encoding
        - x-accept-response-streaming
        - x-user-agent
        - x-grpc-web
      maxAge: 1728s
      exposeHeaders:
        - custom-header-1
        - grpc-status
        - grpc-message
      allowCredentials: true
